Have added ledd that has no id number. #25

--- a/NLP Python Jupyter Notebooks/Text Service - Law chapter text to XML file/Text Service - Law chapter text to XML file.ipynb
+++ b/NLP Python Jupyter Notebooks/Text Service - Law chapter text to XML file/Text Service - Law chapter text to XML file.ipynb
@@ -161,9 +161,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0\tAmended by Regulation of 4 May 2015 No.. 445 (in force on 6 May 2015).\n\nAmended\nNon-combustible material means a material which, when tested and evaluated in accordance with MSC.61(67) (the FTP Code), satisfies the requirements for qualifying materials as non-combustible. The insulation shall, if necessary in order to preserve the fire-insulating effect, be mounted with a sheet of galvanized steel or aluminium.\n\nmaterial\n0\tAmended by Regulation of 4 May 2015 No.. 445 (in force on 6 May 2015).\n\nAmended\nThe vessel's machinery space shall have at least two ventilators capable of being closed from deck. Cabins shall have at least two ventilators with a diameter of at least 8 cm.\n\nvessel\nMaterials, varnishes, paints, etc. produced on a nitrocellulose basis or any other basis which will readily ignite are not permitted to be used anywhere on board.\n\n,\nVessels constructed pursuant to Nordic Boat Standard (1990) are considered to satisfy the requirements of sections 18, 19 and 20.\n\nconstructed\n"
+     ]
+    },
     {
      "output_type": "execute_result",
      "data": {
@@ -317,7 +324,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 115
+     "execution_count": 126
     }
    ],
    "source": [
@@ -354,6 +361,10 @@
     "        type_value = 'none'\n",
     "        forward_identified_sentence_type_list.append((str(line_index_number),sentence_type,type_value))\n",
     "\n",
+    "        if sentence_word_count > 0:\n",
+    "            print(line_text)\n",
+    "            print(word_tokens[1])\n",
+    "\n",
     "forward_identified_sentence_type_list"
    ]
   },
@@ -366,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,19 +429,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 145,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "previous_sentence_type: part\n0\tAmended by Regulation of 4 May 2015 No.. 445 (in force on 6 May 2015).\n\nprevious_sentence_type: headline-section\nNon-combustible material means a material which, when tested and evaluated in accordance with MSC.61(67) (the FTP Code), satisfies the requirements for qualifying materials as non-combustible. The insulation shall, if necessary in order to preserve the fire-insulating effect, be mounted with a sheet of galvanized steel or aluminium.\n\nprevious_sentence_type: part\n0\tAmended by Regulation of 4 May 2015 No.. 445 (in force on 6 May 2015).\n\nprevious_sentence_type: headline-section\nThe vessel's machinery space shall have at least two ventilators capable of being closed from deck. Cabins shall have at least two ventilators with a diameter of at least 8 cm.\n\nprevious_sentence_type: headline-section\nMaterials, varnishes, paints, etc. produced on a nitrocellulose basis or any other basis which will readily ignite are not permitted to be used anywhere on board.\n\nprevious_sentence_type: headline-section\nVessels constructed pursuant to Nordic Boat Standard (1990) are considered to satisfy the requirements of sections 18, 19 and 20.\n\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "previous_sentence_type_that_was_not_none = \"none\"\n",
+    "import re\n",
     "\n",
     "chapter_number = \"undetected\"\n",
     "section_number = \"undetected\"\n",
@@ -487,25 +490,15 @@
     "        element_sub_part_avsnitt = ElementTree.SubElement(element_sub_part, \"avsnitt\")\n",
     "        element_sub_part_avsnitt.text = line_text.replace(\"\\n\",\"\")\n",
     "\n",
+    "    elif identified_sentence_type == \"none\" and len(line_text) > 0 and line_text != \"\\n\":\n",
     "        \n",
+    "        if re.match(\"^\\d+\\t\", line_text):\n",
+    "            element_footnote = ElementTree.SubElement(element_section, \"footnote\")\n",
+    "            element_footnote.text = line_text.replace(\"\\n\",\"\")\n",
     "\n",
-    "    \n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "    ###\n",
-    "\n",
-    "    # at the end of the loop\n",
-    "    if identified_sentence_type != \"none\":\n",
-    "        previous_sentence_type_that_was_not_none = identified_sentence_type\n",
-    "    else:\n",
-    "        if line_text != \"\\n\":\n",
-    "            print(\"previous_sentence_type: \" + previous_sentence_type_that_was_not_none)\n",
-    "            print(line_text) # TODO this must be added to the XML. Handle after everything else is completed.\n",
-    "    \n",
-    "\n"
+    "        else:\n",
+    "            element_part = ElementTree.SubElement(element_section, \"ledd\")\n",
+    "            element_part.text = line_text.replace(\"\\n\",\"\")"
    ]
   },
   {
@@ -517,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
