Added XML root metadata. #25

--- a/NLP Python Jupyter Notebooks/Text Service - Law chapter text to XML file/Text Service - Law chapter text to XML file.ipynb
+++ b/NLP Python Jupyter Notebooks/Text Service - Law chapter text to XML file/Text Service - Law chapter text to XML file.ipynb
@@ -28,6 +28,25 @@
  "cells": [
   {
    "source": [
+    "# Document metadata"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metadata_regulation_number = \"1404\"\n",
+    "metadata_year = \"2013\"\n",
+    "metadata_month = \"11\"\n",
+    "metadata_day = \"22\""
+   ]
+  },
+  {
+   "source": [
     "# Initialize"
    ],
    "cell_type": "markdown",
@@ -377,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,14 +404,21 @@
     "from xml.dom import minidom\n",
     "\n",
     "root = ElementTree.Element('dokument')\n",
-    "#print(ElementTree.tostring(root))\n",
+    "\n",
+    "new_id = \"for-\" + metadata_year + \"-\" + metadata_month + \"-\" + metadata_day + \"-\" + metadata_regulation_number\n",
+    "root.set(\"id\", new_id)\n",
+    "\n",
+    "root.set(\"type\", \"for\")\n",
+    "\n",
+    "new_url = \"https://lovdata.no/forskrift/\" + metadata_year + \"-\" + metadata_month + \"-\" + metadata_day + \"-\" + metadata_regulation_number\n",
+    "root.set(\"url\", new_url)\n",
     "\n",
     "element_text = ElementTree.SubElement(root, 'tekst')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +546,7 @@
     "t = minidom.parseString(ElementTree.tostring(root)).toprettyxml()\n",
     "tree1 = ElementTree.ElementTree(ElementTree.fromstring(t))\n",
     "\n",
-    "tree1.write(\"filename.xml\",encoding='utf-8', xml_declaration=True)"
+    "tree1.write(\"filename.xml\", encoding='utf-8', xml_declaration=True)"
    ]
   }
  ]
