Added lovdata url attribute. #25

--- a/NLP Python Jupyter Notebooks/Text Service - Law chapter text to XML file/Text Service - Law chapter text to XML file.ipynb
+++ b/NLP Python Jupyter Notebooks/Text Service - Law chapter text to XML file/Text Service - Law chapter text to XML file.ipynb
@@ -35,11 +35,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [],
    "source": [
     "metadata_regulation_number = \"1404\"\n",
+    "metadata_regulation_title = \"Regulations of 22 November 2013 No. 1404 on fishing vessels of less than 15 meters in overall length\"\n",
     "metadata_year = \"2013\"\n",
     "metadata_month = \"11\"\n",
     "metadata_day = \"22\""
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +89,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 112
+     "execution_count": 325
     }
    ],
    "source": [
@@ -101,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +146,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 114
+     "execution_count": 327
     }
    ],
    "source": [
@@ -180,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +344,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 126
+     "execution_count": 328
     }
    ],
    "source": [
@@ -396,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 351,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,59 +414,28 @@
     "new_url = \"https://lovdata.no/forskrift/\" + metadata_year + \"-\" + metadata_month + \"-\" + metadata_day + \"-\" + metadata_regulation_number\n",
     "root.set(\"url\", new_url)\n",
     "\n",
-    "element_text = ElementTree.SubElement(root, 'tekst')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 311,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "element_text = ElementTree.SubElement(root, 'tekst')\n",
+    "\n",
     "element_regulation_title = ElementTree.SubElement(element_text, 'tittel')\n",
-    "element_regulation_title.text = \"Regulation_Title\""
+    "element_regulation_title.text = metadata_regulation_title"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "element_kapittel = ElementTree.SubElement(element_text, 'kapittel', type=\"kapittel\")\n",
-    "\n",
-    "if \"chapter_number\" in forward_chapter_info:\n",
-    "    attribute_id = \"/kapittel/\" + forward_chapter_info[\"chapter_number\"]\n",
-    "    element_kapittel.set('id', attribute_id)\n",
-    "\n",
-    "#url = \"https://lovdata.no/forskrift/2013-11-22-1404/k1\"\n",
-    "#element_kapittel.set('url', url)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 313,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if \"chapter_title\" in forward_chapter_info:\n",
-    "    element_ktittel = ElementTree.SubElement(element_kapittel, \"ktittel\")\n",
-    "    element_ktittel.text = forward_chapter_info[\"chapter_title\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 352,
    "metadata": {},
    "outputs": [],
    "source": [
     "import re\n",
     "\n",
     "chapter_number = \"undetected\"\n",
+    "lovdata_chapter_url = \"undetected\"\n",
+    "\n",
     "section_number = \"undetected\"\n",
     "part_number = \"undetected\"\n",
     "sub_part_id = \"undetected\"\n",
     "\n",
+    "element_kapittel = \"\"\n",
     "element_section = \"\"\n",
     "element_part = \"\"\n",
     "element_sub_part = \"\"\n",
@@ -482,6 +452,17 @@
     "    if identified_sentence_type == \"headline-chapter\":\n",
     "        chapter_number = identified_sentence_value\n",
     "\n",
+    "        element_kapittel = ElementTree.SubElement(element_text, 'kapittel', type=\"kapittel\")\n",
+    "\n",
+    "        attribute_id = \"/kapittel/\" + chapter_number\n",
+    "        element_kapittel.set('id', attribute_id)\n",
+    "\n",
+    "        lovdata_chapter_url = \"https://lovdata.no/forskrift/\" + metadata_year + \"-\" + metadata_month + \"-\" + metadata_day + \"-\" + metadata_regulation_number + \"/k\" + chapter_number\n",
+    "        element_kapittel.set('url', lovdata_chapter_url)\n",
+    "\n",
+    "        element_ktittel = ElementTree.SubElement(element_kapittel, \"ktittel\")\n",
+    "        element_ktittel.text = line_text.replace(\"\\n\",\"\")\n",
+    "\n",
     "    elif identified_sentence_type == \"headline-section\":\n",
     "        section_number = identified_sentence_value\n",
     "\n",
@@ -489,6 +470,9 @@
     "\n",
     "        new_id = \"/kapittel/\" + chapter_number + \"/paragraf/\" + section_number\n",
     "        element_section.set(\"id\", new_id)\n",
+    "\n",
+    "        lovdata_section_url = lovdata_chapter_url + \"/p\" + section_number\n",
+    "        element_section.set('url', lovdata_section_url)\n",
     "\n",
     "        element_ptittel = ElementTree.SubElement(element_section, \"ptittel\")\n",
     "        element_ptittel.text = line_text.replace(\"\\n\",\"\")\n",
@@ -536,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 353,
    "metadata": {},
    "outputs": [],
    "source": [
