--- a/NLP Python Jupyter Notebooks/Text Service - Law chapter text to XML file/Text Service - Law chapter text to XML file.ipynb
+++ b/NLP Python Jupyter Notebooks/Text Service - Law chapter text to XML file/Text Service - Law chapter text to XML file.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 354,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 355,
    "metadata": {},
    "outputs": [
     {
@@ -63,12 +63,12 @@
      "name": "stdout",
      "text": [
       "Requirement already satisfied: nltk in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (3.5)\n",
-      "Requirement already satisfied: click in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from nltk) (7.1.2)\n",
+      "Requirement already satisfied: click in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from nltk) (7.1.2)WARNING: You are using pip version 20.3.3; however, version 21.0 is available.\n",
+      "You should consider upgrading via the 'c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\python.exe -m pip install --upgrade pip' command.\n",
+      "\n",
       "Requirement already satisfied: joblib in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from nltk) (1.0.0)\n",
       "Requirement already satisfied: regex in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from nltk) (2020.11.13)\n",
-      "Requirement already satisfied: tqdm in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from nltk) (4.54.1)\n",
-      "WARNING: You are using pip version 20.3.3; however, version 21.0 is available.\n",
-      "You should consider upgrading via the 'c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\python.exe -m pip install --upgrade pip' command.\n"
+      "Requirement already satisfied: tqdm in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from nltk) (4.54.1)\n"
      ]
     }
    ],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 356,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 325
+     "execution_count": 356
     }
    ],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 357,
    "metadata": {},
    "outputs": [
     {
@@ -134,63 +134,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 358,
    "metadata": {},
    "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "{'chapter_title': '3. Fire, machinery and electric installations',\n",
-       " 'chapter_number': '3'}"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 327
-    }
-   ],
-   "source": [
-    "from nltk.tokenize import word_tokenize\n",
-    "\n",
-    "forward_headline_and_section_list = []\n",
-    "\n",
-    "forward_chapter_info = {}\n",
-    "\n",
-    "for line_index_number, line_text in enumerate(forward_file_lines):\n",
-    "\n",
-    "    word_tokens = word_tokenize(line_text, language=\"english\")\n",
-    "\n",
-    "    sentence_word_count = len(word_tokens)\n",
-    "\n",
-    "    if sentence_word_count > 3 and word_tokens[0] == 'Section' and hasNumbers(word_tokens[1]) and word_tokens[2] == '.':\n",
-    "        sentence_type = 'headline-section'\n",
-    "        type_value = word_tokens[1] # section number\n",
-    "        headline_in_a_list = word_tokens[3:sentence_word_count]\n",
-    "        headline_as_a_string = \" \".join(headline_in_a_list)\n",
-    "        forward_headline_and_section_list.append((str(line_index_number),sentence_type,type_value,line_text.replace(\"\\n\",\"\")))\n",
-    "\n",
-    "    # headline-chapter\n",
-    "    elif \"chapter_title\" not in forward_chapter_info and sentence_word_count > 2 and line_index_number == 0 and hasNumbers(word_tokens[0]):\n",
-    "\n",
-    "        forward_chapter_info['chapter_title'] = line_text.replace(\"\\n\",\"\")\n",
-    "        forward_chapter_info['chapter_number'] = word_tokens[0]\n",
-    "\n",
-    "#print(forward_headline_and_section_list)\n",
-    "forward_chapter_info"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 328,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "0\tAmended by Regulation of 4 May 2015 No.. 445 (in force on 6 May 2015).\n\nAmended\nNon-combustible material means a material which, when tested and evaluated in accordance with MSC.61(67) (the FTP Code), satisfies the requirements for qualifying materials as non-combustible. The insulation shall, if necessary in order to preserve the fire-insulating effect, be mounted with a sheet of galvanized steel or aluminium.\n\nmaterial\n0\tAmended by Regulation of 4 May 2015 No.. 445 (in force on 6 May 2015).\n\nAmended\nThe vessel's machinery space shall have at least two ventilators capable of being closed from deck. Cabins shall have at least two ventilators with a diameter of at least 8 cm.\n\nvessel\nMaterials, varnishes, paints, etc. produced on a nitrocellulose basis or any other basis which will readily ignite are not permitted to be used anywhere on board.\n\n,\nVessels constructed pursuant to Nordic Boat Standard (1990) are considered to satisfy the requirements of sections 18, 19 and 20.\n\nconstructed\n"
-     ]
-    },
     {
      "output_type": "execute_result",
      "data": {
@@ -344,7 +290,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 328
+     "execution_count": 358
     }
    ],
    "source": [
@@ -381,10 +327,6 @@
     "        type_value = 'none'\n",
     "        forward_identified_sentence_type_list.append((str(line_index_number),sentence_type,type_value))\n",
     "\n",
-    "        if sentence_word_count > 0:\n",
-    "            print(line_text)\n",
-    "            print(word_tokens[1])\n",
-    "\n",
     "forward_identified_sentence_type_list"
    ]
   },
@@ -397,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 359,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 360,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 361,
    "metadata": {},
    "outputs": [],
    "source": [
