Adjusting footnote to Norwegian language. #25

--- a/NLP Python Jupyter Notebooks/Text Service - Law chapter text to XML file/Text Service - Chapter 3 - Law chapter text to XML file.ipynb
+++ b/NLP Python Jupyter Notebooks/Text Service - Law chapter text to XML file/Text Service - Chapter 3 - Law chapter text to XML file.ipynb
@@ -445,7 +445,7 @@
     "    elif identified_sentence_type == \"none\" and len(line_text) > 0 and line_text != \"\\n\":\n",
     "        \n",
     "        if re.match(\"^\\d+\\t\", line_text):\n",
-    "            element_footnote = ElementTree.SubElement(element_section, \"footnote\")\n",
+    "            element_footnote = ElementTree.SubElement(element_section, \"fotnote\") # Norwegian name on the tag so fotnote is correct spelling\n",
     "            element_footnote.text = line_text.replace(\"\\n\",\"\")\n",
     "\n",
     "        else:\n",
