Added emty metadata element because of validation. #25

--- a/NLP Python Jupyter Notebooks/Text Service - Law chapter text to XML file/Text Service - Chapter 3 - Law chapter text to XML file.ipynb
+++ b/NLP Python Jupyter Notebooks/Text Service - Law chapter text to XML file/Text Service - Chapter 3 - Law chapter text to XML file.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,17 +55,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Requirement already satisfied: nltk in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (3.5)\n",
-      "Requirement already satisfied: click in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from nltk) (7.1.2)WARNING: You are using pip version 20.3.3; however, version 21.0 is available.\n",
+      "Requirement already satisfied: nltk in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (3.5)WARNING: You are using pip version 20.3.3; however, version 21.0.1 is available.\n",
       "You should consider upgrading via the 'c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\python.exe -m pip install --upgrade pip' command.\n",
       "\n",
+      "Requirement already satisfied: click in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from nltk) (7.1.2)\n",
       "Requirement already satisfied: joblib in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from nltk) (1.0.0)\n",
       "Requirement already satisfied: regex in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from nltk) (2020.11.13)\n",
       "Requirement already satisfied: tqdm in c:\\users\\lhustvei\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from nltk) (4.54.1)\n"
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 356
+     "execution_count": 3
     }
    ],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -290,10 +290,12 @@
       ]
      },
      "metadata": {},
-     "execution_count": 358
+     "execution_count": 6
     }
    ],
    "source": [
+    "from nltk.tokenize import word_tokenize\n",
+    "\n",
     "forward_identified_sentence_type_list = []\n",
     "\n",
     "for line_index_number, line_text in enumerate(forward_file_lines):\n",
@@ -339,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,6 +358,8 @@
     "new_url = \"https://lovdata.no/forskrift/\" + metadata_year + \"-\" + metadata_month + \"-\" + metadata_day + \"-\" + metadata_regulation_number\n",
     "root.set(\"url\", new_url)\n",
     "\n",
+    "ElementTree.SubElement(root, 'metadata')\n",
+    "\n",
     "element_text = ElementTree.SubElement(root, 'tekst')\n",
     "\n",
     "element_regulation_title = ElementTree.SubElement(element_text, 'tittel')\n",
@@ -364,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +476,7 @@
     "t = minidom.parseString(ElementTree.tostring(root)).toprettyxml()\n",
     "tree1 = ElementTree.ElementTree(ElementTree.fromstring(t))\n",
     "\n",
-    "tree1.write(\"filename.xml\", encoding='utf-8', xml_declaration=True)"
+    "tree1.write(\"Regulation - 1404-2013-11-22 - Chapter 3.xml\", encoding='utf-8', xml_declaration=True)"
    ]
   }
  ]
