--- a/NLP Python Jupyter Notebooks/Text Service - Law chapter text to XML file/Text Service - Chapter 3 - Law chapter text to XML file.ipynb
+++ b/NLP Python Jupyter Notebooks/Text Service - Law chapter text to XML file/Text Service - Chapter 3 - Law chapter text to XML file.ipynb
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +454,10 @@
     "\n",
     "        else:\n",
     "            element_part = ElementTree.SubElement(element_section, \"ledd\")\n",
-    "            element_part.text = line_text.replace(\"\\n\",\"\")"
+    "            element_part.text = line_text.replace(\"\\n\",\"\")\n",
+    "\n",
+    "            new_id = \"/kapittel/\" + chapter_number + \"/paragraf/\" + section_number + \"/ledd\"\n",
+    "            element_part.set(\"id\", new_id)"
    ]
   },
   {
@@ -466,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
