All avsnitt elements now have an id. #25

--- a/NLP Python Jupyter Notebooks/Text Service - Law chapter text to XML file/Text Service - Chapter 3 - Law chapter text to XML file.ipynb
+++ b/NLP Python Jupyter Notebooks/Text Service - Law chapter text to XML file/Text Service - Chapter 3 - Law chapter text to XML file.ipynb
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,6 +446,9 @@
     "        element_sub_part_avsnitt = ElementTree.SubElement(element_sub_part, \"avsnitt\")\n",
     "        element_sub_part_avsnitt.text = line_text.replace(\"\\n\",\"\")\n",
     "\n",
+    "        new_id = \"/kapittel/\" + chapter_number + \"/paragraf/\" + section_number + \"/ledd/\" + part_number + \"/liste/\" + sub_part_id + \"/avsnitt/1\"\n",
+    "        element_sub_part_avsnitt.set(\"id\", new_id)\n",
+    "\n",
     "    elif identified_sentence_type == \"none\" and len(line_text) > 0 and line_text != \"\\n\":\n",
     "        \n",
     "        if re.match(\"^\\d+\\t\", line_text):\n",
@@ -469,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
